dhall/tests/type-errors/unit/FunctionApplicationIsNotFunction.txt
Type error: Unhandled error: error: expected function, found `Bool`
 --> <current file>:1:0
  |
1 | True True
  | ^^^^ function application requires a function
  |
